# pappapai

./: .gitignore  Cargo.toml  config.toml  ervice -f  pappap_data  reset_all.sh  snn_core.rs
pappap_data/: db
src/: block.rs  cache.rs  chain.rs  config.rs  deploy.rs  ethics.rs  governance.rs  llm.rs  main.rs  oracle.rs  p2p.rs  quantum.rs  snn_core.rs  storage.rs  trainer.rs  transaction.rs  wallet.rs  webnode.rs
src/api/: mod.rs  routes.rs
src/core/: mod.rs  snn.rs  token.rs  wallet.rs
src/network/: mod.rs  p2p.rs
src/services/: knowledge.rs  mod.rs  voice.rs
src/utils/: bus.rs  crypto.rs  ethics.rs  mod.rs
static/: index.html
