[package]
name = "pappap-ai-chain"
version = "0.6.0"
edition = "2021"

[dependencies]
# Web Server
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# System & Storage
sysinfo = "0.29"
sled = "0.34"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
md5 = "0.7"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
url = "2.2"
regex = "1.10"
base64 = "0.21"

# Wallet & Crypto (ÐÃ B? SUNG)
bip39 = "2.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3.5"

# Networking
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.13"
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "identify", "kad", "macros", "tokio"] }

# Logging
env_logger = "0.10"
log = "0.4"
